<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cars</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="start_game">Start Spil</string>
    <string name="display_settings">Indstillinger</string>
    <string name="display_help">Hjælp</string>
    <string name="mic_test">Mikrofon Test</string>
    <string name="next">Videre</string>
    <string name="cancel">Afbryd</string>
    <string name="retry">Prøv igen</string>
    <string name="mic_test_low">Snak med en lav stemme</string>
    <string name="mic_test_high">Snak med en høj stemme</string>
    <string name="none"></string>
    <string name="help_label">Tryk på en knap for at få besvaret spørgsmålet</string>
    <string name="help_mic">Hvordan indstiller jeg mikrofonen</string>
    <string name="help_game">Hvordan spiller jeg spillet?</string>
    <string name="help_settings">Hvordan ændre jeg spil indstillinger?</string>
    <string name="label_start">Cars - Start</string>
    <string name="label_settings">Cars - Indstillinger</string>
    <string name="label_help">Cars - Hjælp</string>
    <string name="colors">Farver på garagerne</string>
    <string name="mic_settings">Indstil mikrofon</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="hundredpct">100%</string>
    <string name="seventyfivepct">75%</string>
    <string name="twentyfivepct">25%</string>
    <string name="fiftypct">50%</string>
    <string name="obstacles">Antal forhindringer</string>
    <string name="carspeed">Bilens hastighed</string>
    <string name="start">Start</string>
    <string name="chosecolor">Vælg en farve</string>
    <string name="mic">Mikrofon</string>
    <string name="michelptext">For at indstille mikrofonen skal du ude på startskærmen trykke på indstillinger og derefter på knappen Start til højre for teksten Mikrofon Indstillinger. Når knappen trykkes bliver din stemme testet ved at optage dig snakke med en dyb stemme og derefter en høj stemme. Til sidst kan du se hvordan din stemme nu påvirker figuren der flytter sig op og ned når du snakker. Hvis resultatet ikke er tilfredsstillende kan testen tages igen, før du begynder at spille.</string>
    <string name="okay">Okay</string>
    <string name="settings">Indstillinger</string>
    <string name="micsettingstext">For at ændre indstillinger i spillet skal du ude på startskærmen trykke på Indstillinger hvorefter et nyt vindue vil vise den nuværendes profils indstillinger. I højre side kan du ændre dine ønskede indstillinger og derefter tryk på knappen Gem. I venstre side er der en liste over af de profile den nuværende bruger kan tilgå. Hvis der trykkes på et navn vises den profils indstillinger</string>
    <string name="gamehelp">Spil Hjælp</string>
    <string name="gamehelptext">Spillet går ud på at styre bilen ind i garagerne der er placeret i højre side af skærmen. Der er forhindringer på kørebanen som skal undgåes. Hvis et objekt bliver påkørt er bilen ødelagt og du skal starte forfra. Du kan styre bilen ned ved at lave en dyb lyd og ligeledes op ved at lave en høj lyd. Hvis alle biler køres ind i deres garage har du vundet spillet</string>

</resources>