<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">
    
    <TextView
        android:id="@+id/dialog_mic_test_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textIsSelectable="true" />
    
    <ImageView 
        android:id="@+id/dialog_drawable_to_mimic"
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/none"/>
        
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    
        
        <!--     style="?android:attr/buttonBarStyle"	
         -->
    <Button
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/cancel"
        android:clickable="true" 
        android:layout_weight="1"/>
            <!-- style="?android:attr/buttonBarButtonStyle"  -->
    

    <Button
        
        android:id="@+id/retry_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/retry" 
        android:clickable="true" 
        android:layout_weight="1"/>
       
 	<Button
        android:id="@+id/next_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/next"
        android:clickable="true" 
        android:layout_weight="1"/>
 	</LinearLayout>
</LinearLayout>