<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	
    
    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="74dp"
        android:text="@string/cancel"
        android:clickable="true" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cancel_button"
        android:layout_alignBottom="@+id/cancel_button"
        android:layout_marginLeft="48dp"
        android:layout_toRightOf="@+id/retry_button"
        android:text="@string/next" 
        android:clickable="true" />

    <Button
        android:id="@+id/retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/next_button"
        android:layout_alignBottom="@+id/next_button"
        android:layout_marginLeft="43dp"
        android:layout_toRightOf="@+id/cancel_button"
        android:text="@string/retry" 
        android:clickable="true" />

</RelativeLayout>