<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartupActivity" >

    <Button
        android:id="@+id/game_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/settings_button"
        android:layout_alignLeft="@+id/settings_button"
        android:layout_marginBottom="29dp"
        android:onClick="showGameView"
        android:text="@string/start_game" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="showSettingsView"
        android:text="@string/display_settings" />

    <Button
        android:id="@+id/help_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/settings_button"
        android:layout_below="@+id/settings_button"
        android:layout_marginTop="29dp"
        android:onClick="showHelpView"
        android:text="@string/display_help" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="62dp"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:textIsSelectable="true" />

</RelativeLayout>